--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,3 +1,89 @@
-<p>
-  cart works!
-</p>
+<div class="main-content-wrap pb-60 pt-60 cart-page">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <form action="#" class="cart-table">
+          <div class="table-content table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th *ngFor="let header of CART_HEADER_TABLE">{{ header }}</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let collection of COLLECTIONS.slice(0, 5)">
+                  <td class="plantmore-product-thumbnail">
+                    <img [src]="collection.images[0]" alt="" />
+                  </td>
+                  <td class="plantmore-product-name">
+                    <a href="#">{{ collection.name }}</a>
+                  </td>
+                  <td class="plantmore-product-price">
+                    <span class="amount">{{ collection.newPrice }}</span>
+                  </td>
+                  <td class="plantmore-product-quantity">
+                    <input
+                      min="1"
+                      value="1"
+                      type="number"
+                      fdprocessedid="eqli4d" />
+                  </td>
+                  <td class="product-subtotal">
+                    <span class="amount"></span>
+                  </td>
+                  <td class="plantmore-product-remove">
+                    <a href="#"><i class="fa fa-times"></i></a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="row">
+            <div class="col-md-8">
+              <div class="coupon-all">
+                <div class="coupon2">
+                  <input
+                    class="submit"
+                    name="update_cart"
+                    value="Cập nhật giỏ hàng"
+                    type="submit"
+                    fdprocessedid="aj5vn" />
+                  <a href="shop.html" class="continue-btn d-inline-block"
+                    >Tiếp tục mua sắm</a
+                  >
+                </div>
+
+                <div class="coupon">
+                  <h3 class="mb-2">Khuyến mãi</h3>
+                  <p class="mb-3">Nhập mã khuyến mãi.</p>
+                  <input
+                    id="coupon_code"
+                    class="input-text"
+                    name="coupon_code"
+                    value=""
+                    placeholder="Coupon code"
+                    type="text" />
+                  <input
+                    class="button"
+                    name="apply_coupon"
+                    value="Thêm mã khuyến mãi"
+                    type="submit" />
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 ml-auto">
+              <div class="cart-page-total">
+                <h2>Tổng tiền</h2>
+                <ul>
+                  <li>Tổng tiền hàng <span>$170.00</span></li>
+                  <li>Tổng thanh toán <span>$170.00</span></li>
+                </ul>
+                <a href="#" class="proceed-checkout-btn">Thanh toán</a>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
