--- a/src/app/pages/account-profile/account-profile.component.html
+++ b/src/app/pages/account-profile/account-profile.component.html
@@ -123,6 +123,46 @@
                     </div>
                   </ng-template>
                 </li>
+                <li [ngbNavItem]="3">
+                  <a ngbNavLink>Mật khẩu</a>
+                  <ng-template ngbNavContent>
+                    <h3>Đổi mật khẩu</h3>
+                    <div class="login-form-container">
+                      <form
+                        [formGroup]="passwordForm"
+                        (submit)="onUpdatePassword()">
+                        <div class="row">
+                          <div class="form-group pb-4 col-12">
+                            <label class="form-label">Mật khẩu cũ</label>
+                            <input
+                              type="password"
+                              class="form-control"
+                              formControlName="password" />
+                          </div>
+                          <div class="form-group pb-4 col-12">
+                            <label class="form-label">Mật khẩu mới</label>
+                            <input
+                              type="password"
+                              class="form-control"
+                              formControlName="newPassword" />
+                          </div>
+                          <div class="form-group pb-4 col-12">
+                            <label class="form-label">Nhập lại mật khẩu</label>
+                            <input
+                              type="password"
+                              class="form-control"
+                              formControlName="confirmNewPassword" />
+                          </div>
+                        </div>
+                        <div class="button-box d-flex justify-content-end">
+                          <button class="btn default-btn" type="submit">
+                            Lưu
+                          </button>
+                        </div>
+                      </form>
+                    </div>
+                  </ng-template>
+                </li>
                 <li>
                   <a>Đăng xuất</a>
                 </li>
