--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -7,7 +7,7 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th *ngFor="let header of CART_HEADER_TABLE">{{ header }}</th>
+                  <th *ngFor="let header of HEADER">{{ header }}</th>
                 </tr>
               </thead>
               <tbody>
