--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -240,13 +240,13 @@
                         <ul>
                           <li>
                             <input type="radio" />
-                            <label>
+                            <label class="ms-1">
                               Flat Rate: <span class="amount">£7.00</span>
                             </label>
                           </li>
                           <li>
                             <input type="radio" />
-                            <label>Free Shipping:</label>
+                            <label class="ms-1">Free Shipping:</label>
                           </li>
                           <li></li>
                         </ul>
