--- a/src/app/components/quick-view-product-modal/quick-view-product-modal.component.html
+++ b/src/app/components/quick-view-product-modal/quick-view-product-modal.component.html
@@ -59,7 +59,7 @@
                   </li>
                 </ul>
                 <a class="ms-2"
-                  >(<span class="count">1</span> customer review)</a
+                  >(<span class="count">1</span> đánh giá)</a
                 >
               </div>
               <div
@@ -82,32 +82,32 @@
                         type="number"
                         class="input-text"
                         name="quantity"
-                        min="0"
+                        min="1"
                         max="100" />
                     </div>
                   </div>
-                  <button class="add-to-cart">Add To Cart</button>
+                  <button class="add-to-cart">Thêm vào giỏ</button>
                 </form>
               </div>
               <ul class="single-add-actions">
                 <li class="add-to-wishlist">
                   <i class="fa-regular fa-heart"></i>
-                  Add to Wishlist
+                  Thêm vào yêu thích
                 </li>
               </ul>
               <ul class="stock-cont">
                 <li class="product-stock-status">
-                  Categories:
+                  Loại sản phẩm:
                   <a href="#">Watchs,</a>
                   <a href="#">Man Watches</a>
                 </li>
                 <li class="product-stock-status">
-                  Tag:
+                  Thẻ:
                   <a href="#">Man</a>
                 </li>
               </ul>
               <div class="share-product-social-area d-flex align-items-center">
-                <p>Share this product</p>
+                <p>Chia sẻ sản phẩm này</p>
                 <ul class="single-product-share">
                   <li>
                     <a>
