--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,201 @@
-<p>about works!</p>
+<div class="about-wrapper">
+  <img src="../../../assets/images/about/1.webp" alt="" class="w-100 h-100" />
+  <div class="container mt-5">
+    <div class="mb-5">
+      <div class="heading-container">
+        <h3 class="heading mb-2">Thành lập năm 2020</h3>
+        <h2 class="heading mb-2">Cam kết chính hãng 100%</h2>
+      </div>
+      <div class="ext-gt">
+        <p>
+          Trải qua nhiều năm thành lập, với những nỗ lực không ngừng,
+          WatchStore.vn đã gặt hái nhiều thành công trong hoạt động kinh doanh
+          và chiếm lĩnh trên thị trường.
+        </p>
+        <p><strong>Các cột mốc đáng ghi nhớ:</strong></p>
+        <p>
+          <strong>•&nbsp;Năm 2020</strong>: Trở thành đại lý bán lẻ chính thức
+          của thương hiệu đồng hồ Casio do Công ty Cổ Phần Anh Khuê Watch chứng
+          nhận.
+        </p>
+        <p>
+          <strong>•&nbsp;Năm 2021</strong>: Được cấp giấy chứng nhận đại lý ủy
+          quyền bán lẻ chính thức của các thương hiệu đồng hồ cao cấp Orient,
+          Seiko.
+        </p>
+        <p>
+          <strong>•&nbsp;Năm 2022</strong>: Chứng nhận đại lý chính hãng của các
+          thương hiệu đồng hồ Frederique Constant, Srwatch, Freelook, Daniel
+          Klein
+        </p>
+        <p>
+          <strong>•&nbsp;Năm 2023</strong>: Đại lý ủy quyền chính thức của
+          thương hiệu đồng hồ Citizen, Olym Pianus, Olympia Star, Ogival,
+          Bentley, I&amp;W Carnival.
+        </p>
+      </div>
+    </div>
+    <div class="mb-5">
+      <div class="heading-container">
+        <h3 class="heading mb-2">Các thương hiệu đồng hồ</h3>
+        <h2 class="heading mb-2">WatchStore đang phân phối</h2>
+      </div>
+      <div class="ext-gt mb-4">
+        <p>
+          Hơn 20 thương hiệu đồng hồ chính hãng nổi tiếng đến từ Nhật Bản, Thụy
+          Sỹ, Pháp… hiện đang được trưng bày tại các showroom của đồng hồ
+          WatchStore trên toàn quốc. Cam kết 100% sản phẩm chính hãng được trợ
+          giá tốt nhất thị trường.
+        </p>
+      </div>
+      <app-our-partners></app-our-partners>
+    </div>
+    <div class="mb-5">
+      <div class="heading-container">
+        <h3 class="heading"></h3>
+        <h2 class="heading">Ngành nghề kinh doanh</h2>
+      </div>
+      <div class="ext-gt">
+        <p>
+          • <strong>Bán lẻ đồng hồ</strong>: WatchStore.vn trở thành thương hiệu
+          đồng hồ uy tín phục vụ tận tâm, chuyên nghiệp, phân phối đồng hồ chính
+          hãng cho hàng nghìn khách hàng trên toàn quốc.
+        </p>
+        <p>
+          • <strong>Bán sỉ đồng hồ cho các doanh nghiệp</strong>: Đồng hồ
+          WatchStore.vn là địa chỉ uy tín được nhiều doanh nghiệp tin tưởng khi
+          tìm kiếm những mẫu đồng hồ làm quà tặng cho nhân viên, hoặc quà tặng
+          đối tác.
+        </p>
+        <p>
+          • <strong>Phân phối dây da và phụ kiện chính hãng</strong>: Hiểu được
+          nhu cầu của khách hàng, WatchStore.vn đã liên kết với các đối tác,
+          chọn lọc và phân phối các phụ kiện đồng hồ chính hãng, đa dạng lựa
+          chọn cho khách hàng.
+        </p>
+        <p>
+          • <strong>Sửa chữa và bảo dưỡng đồng hồ</strong>: Bên cạnh kinh doanh
+          bán lẻ đồng hồ, WatchStore.vn còn cung cấp dịch vụ sửa chữa và bảo
+          dưỡng đồng hồ chuyên nghiệp với đội ngũ kỹ thuật tay nghề cao.
+        </p>
+      </div>
+    </div>
+    <div class="mb-5">
+      <div class="heading-container">
+        <h2 class="heading">Đại lý phân phối chính hãng</h2>
+      </div>
+      <div class="ext-gt">
+        <p>
+          Hiện nay, để đáp ứng nhu cầu mua sắp không ngừng gia tăng,
+          WatchStore.vn đã thành lập 5 cửa hàng đồng hồ trên toàn quốc. Được đặt
+          tại các vị trí đắc địa, thuận tiện giao thông, thiết kế không gian
+          sang trọng, tạo nên tiện nghi cho khách hàng lựa chọn và mua sắm.
+        </p>
+      </div>
+      <div class="container">
+        <div class="dsch_list ent-flex">
+          <div class="item_dsch_list">
+            <h4>WatchStore Trần Đại Nghĩa</h4>
+            <div class="ct_cd">
+              <p>97 Trần Đại Nghĩa, HBT, Hà Nội</p>
+              <a
+                target="_blank"
+                class="color-blue"
+                href="https://goo.gl/maps/bCrqSUZgrUVfNWDN7"
+                ><i class="fa-solid fa-map-pin me-1"></i> Xem chỉ đường</a
+              >
+            </div>
+          </div>
+          <div class="item_dsch_list">
+            <h4>WatchStore Trần Đăng Ninh</h4>
+            <div class="ct_cd">
+              <p>58 Trần Đăng Ninh, Cầu Giấy, Hà Nội</p>
+              <a
+                target="_blank"
+                class="color-blue"
+                href="https://goo.gl/maps/c7QvgddZgdtJ9fKW9"
+                ><i class="fa-solid fa-map-pin me-1"></i> Xem chỉ đường</a
+              >
+            </div>
+          </div>
+          <div class="item_dsch_list">
+            <h4>WatchStore Lê Văn Sỹ</h4>
+            <div class="ct_cd">
+              <p>90 Lê Văn Sỹ, P11, Phú Nhuận, HCM</p>
+              <a
+                target="_blank"
+                class="color-blue"
+                href="https://goo.gl/maps/Hsi8dhnpfwGgC4s36"
+                ><i class="fa-solid fa-map-pin me-1"></i> Xem chỉ đường</a
+              >
+            </div>
+          </div>
+          <div class="item_dsch_list">
+            <h4>WatchStore Quang Trung</h4>
+            <div class="ct_cd">
+              <p>61 Quang Trung, P10, Gò Vấp, HCM</p>
+              <a
+                target="_blank"
+                class="color-blue"
+                href="https://goo.gl/maps/J88jtv1u9NfZGFAh6"
+                ><i class="fa-solid fa-map-pin me-1"></i> Xem chỉ đường</a
+              >
+            </div>
+          </div>
+          <div class="item_dsch_list">
+            <h4>WatchStore Lê Quang Định</h4>
+            <div class="ct_cd">
+              <p>193 Lê Quang Định, Bình Thạnh, HCM</p>
+              <a
+                target="_blank"
+                class="color-blue"
+                href="https://goo.gl/maps/Wdneitu3kAcVpP3MA"
+                ><i class="fa-solid fa-map-pin me-1"></i> Xem chỉ đường</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mb-5">
+      <div class="heading-container">
+        <h2 class="heading">Các sự kiện cùng đối tác lớn</h2>
+      </div>
+      <div class="ext-gt">
+        <p>
+          Ban Lãnh Đạo WatchStore.vn luôn không ngừng nâng cao kinh nghiệm và
+          kiến thức chuyên môn để đào tạo nhân viên và mở rộng mối quan hệ cùng
+          đối tác. Dưới đây là hình ảnh Ban Lãnh Đạo WatchStore tham dự các hội
+          thảo của đối tác lớn như Orient, Casio… khi làm việc tại Việt Nam.
+        </p>
+      </div>
+      <div class="swiper-partners pb-60">
+        <div class="container">
+          <swiper
+            [slidesPerView]="5"
+            [centeredSlides]="false"
+            [spaceBetween]="20"
+            slideActiveClass="swiper-active"
+            [navigation]="false"
+            [pagination]="false"
+            [autoplay]="{ delay: 500, disableOnInteraction: false }"
+            [virtual]="true"
+            [speed]="1200">
+            <ng-container>
+              <ng-template
+                swiperSlide
+                *ngFor="let partners of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]">
+                <img
+                  src="/assets/images/about/partner-5.jpg"
+                  alt=""
+                  height="200"
+                  class="object-fit-cover" />
+              </ng-template>
+            </ng-container>
+          </swiper>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
