--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -1,1 +1,260 @@
-<p>product-detail works!</p>
+<div class="main-content-wrap shop-page pt-60 pb-60">
+  <div class="container">
+    <div class="row product-details-inner">
+      <div class="col-lg-5 col-md-6">
+        <div class="gallery">
+          <swiper
+            [spaceBetween]="10"
+            [navigation]="false"
+            [thumbs]="{ swiper: thumbsSwiper }"
+            class="mySwiper2 mb-3 w-100">
+            <ng-template swiperSlide *ngFor="let image of productItem?.images">
+              <img [src]="image" alt="" class="w-100" />
+            </ng-template>
+          </swiper>
+          <swiper
+            (swiper)="thumbsSwiper = $event"
+            [loop]="false"
+            [spaceBetween]="10"
+            [slidesPerView]="slidesPerView"
+            [freeMode]="true"
+            [watchSlidesProgress]="true"
+            class="custome-swiper mb-2 w-100">
+            <ng-template
+              swiperSlide
+              *ngFor="let image of productItem?.images; let index = index">
+              <img class="image-thumbnail w-100" [src]="image" alt="" />
+            </ng-template>
+          </swiper>
+        </div>
+      </div>
+
+      <div class="col-lg-7 col-md-6">
+        <div class="product-details-view-content">
+          <div class="product-info">
+            <h3>Ornare sed consequat</h3>
+            <div class="product-rating d-flex align-items-center">
+              <ul class="d-flex">
+                <li>
+                  <i class="fa-regular fa-star"></i>
+                </li>
+                <li>
+                  <i class="fa-regular fa-star"></i>
+                </li>
+                <li>
+                  <i class="fa-regular fa-star"></i>
+                </li>
+                <li>
+                  <i class="fa-regular fa-star"></i>
+                </li>
+                <li>
+                  <i class="fa-regular fa-star"></i>
+                </li>
+              </ul>
+              <a href="#reviews" class="ms-2"
+                >(<span class="count">1</span> đánh giá)</a
+              >
+            </div>
+            <div class="price-box">
+              <span class="new-price">$70.00</span>
+              <span class="old-price">$78.00</span>
+            </div>
+            <p class="mb-3">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+              fringilla augue nec est tristique auctor. Donec non est at libero
+              vulputate rutrum. Morbi ornare lectus quis justo gravida semper.
+              Nulla tellus mi, vulputate adipiscing cursus eu, suscipit id
+              nulla.
+            </p>
+
+            <div class="single-add-to-cart">
+              <form action="#" class="cart-quantity d-flex">
+                <div class="quantity">
+                  <div class="cart-plus-minus">
+                    <input
+                      type="number"
+                      class="input-text"
+                      name="quantity"
+                      value="1"
+                      title="Qty"
+                      fdprocessedid="ryazoi" />
+                  </div>
+                </div>
+                <button
+                  class="add-to-cart"
+                  type="submit"
+                  fdprocessedid="hhl0mg">
+                  Thêm vào giỏ
+                </button>
+              </form>
+            </div>
+            <ul class="single-add-actions">
+              <li class="add-to-wishlist">
+                <a href="wishlist.html" class="add_to_wishlist"
+                  ><i class="fa-regular fa-heart"></i> Thêm vào yêu thích</a
+                >
+              </li>
+              <li class="add-to-compare">
+                <div class="compare-button">
+                  <a href="compare.html"
+                    ><i class="fa-solid fa-arrows-rotate"></i> So sánh</a
+                  >
+                </div>
+              </li>
+            </ul>
+            <ul class="stock-cont">
+              <li class="product-sku">Sku: <span>P006</span></li>
+              <li class="product-stock-status">
+                Loại sản phẩm: <a href="#">Butter &amp; Eggs,</a>
+                <a href="#">Cultured Butter</a>
+              </li>
+              <li class="product-stock-status">Thẻ: <a href="#">Man</a></li>
+            </ul>
+            <div class="share-product-socail-area">
+              <p>Chia sẻ sản phẩm</p>
+              <ul class="single-product-share">
+                <li>
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="product-description-area mt-60">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="product-details-tab">
+            <ul
+              ngbNav
+              #nav="ngbNav"
+              [(activeId)]="active"
+              class="nav-tabs"
+              (navChange)="onNavChange($event)">
+              <li [ngbNavItem]="1">
+                <button ngbNavLink class="text-size-medium">Mô tả</button>
+                <ng-template ngbNavContent>
+                  <div class="product_description_wrap mt-30">
+                    <div class="product_desc mb-30">
+                      <p class="mb-3">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nam fringilla augue nec est tristique auctor. Donec non
+                        est at libero vulputate rutrum. Morbi ornare lectus quis
+                        justo gravida semper. Nulla tellus mi, vulputate
+                        adipiscing cursus eu, suscipit id nulla.
+                      </p>
+
+                      <p>
+                        Pellentesque aliquet, sem eget laoreet ultrices, ipsum
+                        metus feugiat sem, quis fermentum turpis eros eget
+                        velit. Donec ac tempus ante. Fusce ultricies massa
+                        massa. Fusce aliquam, purus eget sagittis vulputate,
+                        sapien libero hendrerit est, sed commodo augue nisi non
+                        neque. Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Sed tempor, lorem et placerat
+                        vestibulum, metus nisi posuere nisl, in accumsan elit
+                        odio quis mi. Cras neque metus, consequat et blandit et,
+                        luctus a nunc. Etiam gravida vehicula tellus, in
+                        imperdiet ligula euismod eget.
+                      </p>
+                    </div>
+                  </div>
+                </ng-template>
+              </li>
+              <li [ngbNavItem]="2">
+                <button ngbNavLink class="text-size-medium">Đánh giá</button>
+                <ng-template ngbNavContent>
+                  <div class="rating_wrap mt-30">
+                    <h5 class="rating-title-1 text-size-medium mb-2">
+                      Thêm đánh giá
+                    </h5>
+                    <p class="mb-3">
+                      Email của bạn sẽ không bị công khai. Những trường bắt buộc
+                      có *
+                    </p>
+                    <h6 class="rating-title-2 mb-2">Đánh giá của bạn</h6>
+                    <div class="rating_list">
+                      <div class="review_info mb-2">
+                        <ul class="product-rating d-flex mb-2">
+                          <li><i class="fa-regular fa-star"></i></li>
+                          <li><i class="fa-regular fa-star"></i></li>
+                          <li><i class="fa-regular fa-star"></i></li>
+                          <li><i class="fa-regular fa-star"></i></li>
+                          <li><i class="fa-regular fa-star"></i></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="comments-area comments-reply-area">
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <form action="#" class="comment-form-area">
+                          <div class="row comment-input">
+                            <div class="col-md-6 form-group mt-3" required>
+                              <label class="form-label">Tên</label>
+                              <input type="text" class="form-control" />
+                            </div>
+                            <div class="col-md-6 form-group mt-3" required>
+                              <label class="form-label">Email</label>
+                              <input type="text" class="form-control" />
+                            </div>
+                          </div>
+                          <div class="mt-3 form-group col-md-12">
+                            <label class="form-label">Đánh giá</label>
+                            <textarea class="form-control"></textarea>
+                          </div>
+                          <div class="comment-form-submit mt-3">
+                            <input
+                              type="submit"
+                              value="Gửi"
+                              class="comment-submit" />
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </ng-template>
+              </li>
+            </ul>
+
+            <div [ngbNavOutlet]="nav" class="my-2 px-3"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="related-product-area pt-60">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="section-title">
+            <h3 class="text-size-xl">Sản phẩm liên quan</h3>
+          </div>
+        </div>
+        <div class="row product">
+          <app-swiper-product></app-swiper-product>
+        </div>
+      </div>
+    </div>
+
+    <div class="related-product-area pt-60">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="section-title">
+            <h3 class="text-size-xl">Sản phẩm bán chạy</h3>
+          </div>
+        </div>
+      </div>
+      <div class="row product">
+        <app-swiper-product></app-swiper-product>
+      </div>
+    </div>
+  </div>
+</div>
